--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -29,8 +29,8 @@
     </div>
 
     <!-- scripts and styles -->
-    {% style "/assets/bootstrap/css/bootstrap.min.css" %}
     {% style "/assets/font-awesome/css/font-awesome.min.css" %}
+    {% style "/css/flexboxgrid.min.css" %}
     {% style "/css/screen.css" %}
 
     <script type="text/javascript">
