--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -3,6 +3,8 @@
   <head>
       <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="mobile-web-app-capable" content="yes">
+      <meta name="apple-mobile-web-app-capable" content="yes">
       <title>twitteruption</title>
   </head>
   <body>
